--- a/BUILD.gn
+++ b/BUILD.gn
@@ -17,8 +17,10 @@ copy("misc") {
   sources = [
     "cube.obj",
     "plane.obj",
-    "wolf.dae",
     "wolf.obj",
+
+    "pirate.dae",
+    "wolf.dae",
 
     "UbuntuMono-Regular.ttf",
   ]
